# Coffee-and-Go

./: .gitignore  LICENSE  README.md  docker-compose.yml  template.yaml
AUTOFIT-BACKEND/: AGENTS.md
AUTOFIT-BACKEND/database/queries/: synthetic_data.sql
AUTOFIT-BACKEND/src/tests/: test_api.py
Backend/: .env.example  pyproject.toml  test_manual.sh
Backend/database/: schema.sql
Backend/database/queries/: README.md  load_synthetic_data.sh  search.sql  test_synthetic.sql
Backend/src/: main.py
autofit-backend/src/tests/: test_comprehensive.py
backend/: README.md  keystone.ts  package.json  schema.graphql  schema.prisma  schema.ts
backend-fastapi/: requirements.txt
backend-fastapi/app/: database.py  main.py
backend-fastapi/app/api/: users.py
backend-fastapi/app/models/: user.py
backend-fastapi/app/schemas/: user.py
backend-fastapi/app/services/: aws_s3.py
backend/database/docs/: README.md
backend/migrations/20250711211153_init/: migration.sql
backend/migrations/20250716212728_base_tables/: migration.sql
backend/migrations/20250716224321_init/: migration.sql
backend/migrations/20250721182322_init/: migration.sql
backend/migrations/20250813211202_init/: migration.sql
backend/schemas/: App.ts  Asset.ts  Catalog.ts  DigitalAsset.ts  PartType.ts  User.ts
backend/schemas/ACES/: AcesApp.ts  AcesAsset.ts  AcesDigitalFileInformation.ts
backend/schemas/PAdb/: MeasurementGroup.ts  MetaData.ts  MetaUOMCode.ts  MetaUOMCodeAssignment.ts  PartAttribute.ts  PartAttributeAssignment.ts  PartAttributeStyle.ts  PartTypeStyle.ts  Style.ts  ValidValue.ts  ValidValueAssignment.ts  Version.ts
backend/schemas/PCdb/: ACESCodedValue.ts  Alias.ts  Category.ts  Change.ts  ChangeAttributeState.ts  ChangeDetail.ts  ChangeReason.ts  ChangeTableName.ts  (+18 more)
backendStack/: .env.example  AGENTS.md  README.md  pyproject.toml
backendStack/database/: schema.sql
backendStack/database/docs/: README.md
backendStack/src/: main.py
backendStack/src/application/use_cases/: user_use_cases.py
frontend/: main.py  package.json
frontend/src/: App.css  App.js
(+128 files in other folders)
